--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -6,26 +6,26 @@
     <div class="container login-form-container">
         <div class="row">
             <div class="col-sm-12">
-                <h1 class="login-form-header">Luštěniny</h1>
+                <h1 class="login-form-header" th:utext="#{label.login.puzzlehunt}">Luštěniny</h1>
 
                 <form action="/login" method="post">
                     <!--<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>-->
 
                     <div class="form-group">
-                        <label for="username" class="login-form-label">Uživatelské jméno</label>
+                        <label for="username" class="login-form-label" th:utext="#{label.login.username}">Uživatelské jméno</label>
                         <input type="text" autocorrect="off" autocapitalize="none" class="form-control" id="username" name="username" autofocus/>
                     </div>
 
                     <div class="form-group">
-                        <label for="password" class="login-form-label">PIN nebo heslo</label>
+                        <label for="password" class="login-form-label" th:utext="#{label.login.password}">PIN nebo heslo</label>
                         <input type="password" class="form-control" id="password" name="password"/>
                     </div>
 
                     <div class="login-form-error-wrapper">
-                        <span th:if="${param.error != null}" class="login-form-error">Přihlášení se nezdařilo.</span>
+                        <span th:if="${param.error != null}" class="login-form-error" th:utext="#{label.login.loginerror}">Přihlášení se nezdařilo</span>
                     </div>
 
-                    <button type="submit" class="btn btn-primary">Přihlásit</button>
+                    <button type="submit" class="btn btn-primary" th:utext="#{label.login.login}">Přihlásit</button>
                 </form>
             </div>
         </div>
