[Refactor] JavaScript variables

--- a/src/main/resources/templates/client/cypher/detail.html
+++ b/src/main/resources/templates/client/cypher/detail.html
@@ -153,8 +153,7 @@
             function getCypherLocation() {
                 var lat = [[${cypher.location.getY()}]];
                 var lng = [[${cypher.location.getX()}]];
-                var locationOfCypher = {lat: lat, lng: lng};
-                return locationOfCypher;
+                return {lat: lat, lng: lng};
             }
 
         </script>
