substitute p shortcut tag with closing tag

--- a/src/main/resources/templates/progress/list.html
+++ b/src/main/resources/templates/progress/list.html
@@ -9,7 +9,7 @@
         <div class="col-sm-12">
             <h1>Šifry</h1>
             <div th:if="${cyphers.empty}">
-                <p>V systému nejsou šifry<p/>
+                <p>V systému nejsou šifry</p>
             </div>
 
             <div th:each="cypher : ${cyphers}" class="cypher organizer">
