--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -329,9 +329,9 @@ a:hover{
     width: 100%;
     transition: all 0.3s ease 0s;
     font-weight: 600;
-    -webkit-box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.3);
-    -moz-box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.3);
-    box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.3);
+    -webkit-box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.3);
+    -moz-box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.3);
+    box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.3);
     margin-top: 0.2rem;
     margin-bottom: 0.2rem;
     border: none;
@@ -358,17 +358,17 @@ a:hover{
 }
 
 .container .row .btn-secondary:hover {
-    -webkit-box-shadow: 0px 3px 16px 2px rgba(0, 0, 0, 0.42);
-    -moz-box-shadow: 0px 3px 16px 2px rgba(0, 0, 0, 0.42);
-    box-shadow: 0px 3px 16px 2px rgba(0, 0, 0, 0.42);
+    -webkit-box-shadow: 0 3px 16px 2px rgba(0, 0, 0, 0.42);
+    -moz-box-shadow: 0 3px 16px 2px rgba(0, 0, 0, 0.42);
+    box-shadow: 0 3px 16px 2px rgba(0, 0, 0, 0.42);
     background-color: white;
     color: rgb(237, 24, 72);
 }
 
 .container .row .btn-primary:hover {
-    -webkit-box-shadow: 0px 3px 16px 2px rgba(0, 0, 0, 0.42);
-    -moz-box-shadow: 0px 3px 16px 2px rgba(0, 0, 0, 0.42);
-    box-shadow: 0px 3px 16px 2px rgba(0, 0, 0, 0.42);
+    -webkit-box-shadow: 0 3px 16px 2px rgba(0, 0, 0, 0.42);
+    -moz-box-shadow: 0 3px 16px 2px rgba(0, 0, 0, 0.42);
+    box-shadow: 0 3px 16px 2px rgba(0, 0, 0, 0.42);
     background-color: rgb(237, 24, 72);
     color: #FFF;
 }
@@ -402,7 +402,7 @@ a:hover{
 .container .row .btn.btn-flat {
     -webkit-box-shadow: none;
     -moz-box-shadow: none;
-    border-radius: 0px;
+    border-radius: 0;
     box-shadow: none;
     margin: 2px;
     font-size: 1rem;
@@ -414,7 +414,7 @@ a:hover{
 
 .btn-cn {
     background-color: rgb(237, 24, 72);
-    margin: 0px;
+    margin: 0;
 }
 
 .big-centered-text {
@@ -453,9 +453,9 @@ td .btn-default {
 #final-place {
     background-color: rgb(237, 24, 72);
     color: white;
-    -webkit-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.5);
-    -moz-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.5);
-    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.5);
+    -webkit-box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.5);
+    -moz-box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.5);
+    box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.5);
     margin-top: 4px;
 }
 
@@ -488,8 +488,8 @@ td .btn-default {
 
 #footer {
     position: fixed;
-    left: 0px;
-    bottom: 0px;
+    left: 0;
+    bottom: 0;
     width: 100%;
 }
 
@@ -607,8 +607,8 @@ td .btn-default {
 
 ul.contact {
     list-style: none;
-    padding: 0px;
-    margin: 0px;
+    padding: 0;
+    margin: 0;
 }
 
 ul.contact i {
